fix layout spacings

--- a/web/app/themes/evaldomariano/resources/assets/styles/common/_global.scss
+++ b/web/app/themes/evaldomariano/resources/assets/styles/common/_global.scss
@@ -17,3 +17,7 @@ a {
   background-color: $night-rider;
   color: $white !important;
 }
+
+.main {
+  overflow: hidden;
+}
